--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@coreui/vue": "^3.1.2",
         "@fortawesome/fontawesome-free": "^5.15.1",
         "admin-lte": "^3.0.2",
+        "apexcharts": "^3.22.2",
         "bootstrap-vue": "^2.11.0",
         "buefy": "^0.9.3",
         "datatables.net": "^1.10.22",
@@ -42,6 +43,7 @@
         "v-pagination": "^0.1.4",
         "v-select2-component": "^0.4.3",
         "v-tooltip": "^2.0.3",
+        "vue-apexcharts": "^1.6.0",
         "vue-columns-resizable": "0.0.1",
         "vue-html-to-paper": "^1.3.1",
         "vue-js-modal": "^2.0.0-rc.3",
